# BRAID

./: .gitignore  README.md  bias_correction.py  pyproject.toml  requirements.txt  test_model.py  test_unseen.py  train.py
data/dataset_splitting/: README.md
experiments/2023-12-13_Test_DataLoader/: test_dataloader.py
experiments/2023-12-14_Test_DataLoader_reweight/: test_dataloader_reweight_probability.py  test_minimum_number.py  test_random_choice.py
experiments/2023-12-15_Test_DataLoader_reweight_faster/: test_dataloader_reweight_probability_faster.py
experiments/2024-01-17_Test_Mixed_Effects_Model_ADNI/: lme_test_exp.py
experiments/2024-01-31_Test_Regular_Expression_SLANT_TICV_folder/: test_re_slantticv.py
experiments/2024-02-09_Diagnosis_Group_Comparison/: diagnosis_group_comparison_demo.ipynb
experiments/2024-03-01_Test_Bias_Correction/: linear_regression_bias_correction.py
experiments/2024-03-06_Cross_Sectional_CN_MCI_Dementia_Classification/: cross_sectional_classification_CN_CNstar_MCI_AD.py  cross_sectional_classification_CN_CNstar_MCI_AD_v1.py  cross_sectional_classification_CN_CNstar_MCI_AD_v2.py  cross_sectional_classification_CN_CNstar_MCI_AD_v3.py  cross_sectional_classification_CN_CNstar_MCI_AD_v4.py  data_v2_info.txt  data_v4_info.txt  notes.md
experiments/2024-03-20_Matched_Cohort_Linear_Model/: linear_models_across_categories.py  matched_cohort.py  report_cn_star_exact_interval.py  (+2 more)
models/: README.md
scripts_dev/: bias_correction.py  test_model.py  train.py
singularity/: Singularity.def  reproduce_examples.py  runscript.sh
(+161 files in other folders)
