[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "braid"
version = "1.0.0"
description = "Brain Age Identification from Diffusion MRI."
authors = [
    {name = "Chenyu Gao", email = "chenyu.gao@vanderbilt.edu"}
]
dependencies = [
    "monai==1.4.0",
    "nibabel>=5.1.0",
    "torch", 
    "torchvision", 
    "torchaudio",
    "pandas>=2.1.3",
    "numpy>=1.26.4",
    "tqdm",
    "PyYAML>=6.0.1",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "statsmodels>=0.14.1"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
braid_one_sample_inference = "braid.scripts.braid_one_sample_inference:main"